# crazyflie-swarmcontroller

crazyflie/: package.xml
crazyflie_controller/: CMakeLists.txt  package.xml
crazyflie_controller/launch/: controller.launch
crazyflie_controller/src/: controller.cpp  pid.hpp
crazyflie_cpp/: CMakeLists.txt  package.xml
crazyflie_cpp/include/crazyflie_cpp/: Crazyflie.h  Crazyradio.h  crtp.h
crazyflie_cpp/src/: Crazyflie.cpp  Crazyradio.cpp
crazyflie_demo/launch/: hover_vrpn.launch  multi_hover_vrpn.launch  teleop_ps3.launch
crazyflie_demo/scripts/: demo.py
crazyflie_driver/: CMakeLists.txt  package.xml
crazyflie_driver/launch/: crazyflie_add_group.launch  crazyflie_server.launch
crazyflie_driver/src/: crazyflie_add.cpp  crazyflie_add_group.cpp  crazyflie_server.cpp
crazyflie_driver/srv/: AddCrazyflie.srv
crazyflie_goals_publisher/: CMakeLists.txt  package.xml
crazyflie_goals_publisher/include/: commands.h  goal.h  goal.h~  goals_publisher.h  goals_publisher.h~  interpolations.h  paths_creator.h  world.h
crazyflie_goals_publisher/launch/: goals_publisher.launch  goals_publisher.launch~
crazyflie_goals_publisher/src/: goals_publisher.cpp  goals_publisher_node.cpp  interpolations.cpp  paths_creator.cpp  world.cpp
crazyflie_input_devices/: CMakeLists.txt  package.xml
crazyflie_input_devices/src/: keyboard.cpp
crazyflie_neuron_controller/: CMakeLists.txt  package.xml
crazyflie_neuron_controller/include/: bone.h  gesture.h  gesture_recognizer.h  hand.h  observer.h
crazyflie_neuron_controller/src/: bone.cpp  gesture.cpp  gesture_recognizer.cpp  hand.cpp  neuron_controller_node.cpp
crazyflie_run/: CMakeLists.txt  package.xml
crazyflie_run/launch/: run_vrpn.launch
crazyflie_test_input_devices/: CMakeLists.txt  package.xml
crazyflie_test_input_devices/src/: keyboard.cpp
crazyflie_tools/: CMakeLists.txt  package.xml
crazyflie_tools/src/: getParam.cpp  listLogVariables.cpp  listParams.cpp  reboot.cpp  scan.cpp
perception_neuron_tf_broadcaster/: CMakeLists.txt
perception_neuron_tf_broadcaster/src/: perception_neuron_tf_broadcaster_node.cpp
