<package>
  <name>crazyflie</name>
  <version>0.0.1</version>
  <maintainer email="somemail@somemail.com">Crazyprogers</maintainer>
  <license>MIT</license>
  <description>ROS integration for Crazyflie Nano Quadcopter from Bitcraze</description>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>crazyflie_cpp</run_depend>
  <run_depend>crazyflie_driver</run_depend>
  <run_depend>crazyflie_description</run_depend>
  <run_depend>crazyflie_controller</run_depend>
  <run_depend>crazyflie_goals_publisher</run_depend>
  <run_depend>crazyflie_run</run_depend>
  <run_depend>crazyflie_tools</run_depend>
  <run_depend>crazyflie_input_devices</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
