<?xml version="1.0"?>
<package>
  <name>crazyflie_controller</name>
  <version>0.0.1</version>
  <maintainer email="somemail@somemail.com">Crazyprogers</maintainer>
  <license>MIT</license>

  <description>Controller to fly a Crazyflie in a space with location feedback (such as motion capture).</description>

  <buildtool_depend>catkin</buildtool_depend>
</package>
