<?xml version="1.0"?>
<package>
  <name>crazyflie_cpp</name>
  <version>0.0.1</version>
  <maintainer email="somemail@somemail.com">Crazyprogers</maintainer>
  <license>MIT</license>
  <description>CPP interface for Crazyflie Nano Quadcopter from Bitcraze</description>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libusb-1.0-dev</build_depend>
  <run_depend>libusb-1.0-dev</run_depend>
</package>
