<?xml version="1.0"?>
<package>
  <name>crazyflie_input_devices</name>
  <version>0.0.1</version>
  <description>Tools for Crazyflie Nano Quadcopter from Bitcraze</description>

  <maintainer email="whoenig@usc.edu">Wolfgang Hoenig</maintainer>

  <license>MIT</license>

  <url type="website">http://ros.org/wiki/crazyflie</url>
  <url type="bugtracker">https://github.com/whoenig/crazyflie_ros/issues</url>

  <author email="whoenig@usc.edu">Wolfgang Hoenig</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_srvs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>std_srvs</run_depend>
  <run_depend>roscpp</run_depend>
</package>
