<?xml version="1.0"?>
<package>
  <name>crazyflie_tools</name>
  <version>0.0.1</version>
  <maintainer email="somemail@somemail.com">Crazyprogers</maintainer>
  <license>MIT</license>

  <description>Tools for Crazyflie Nano Quadcopter from Bitcraze</description>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>crazyflie_cpp</build_depend>

  <run_depend>crazyflie_cpp</run_depend>

</package>
